--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ffffff",
-        "activityBar.background": "#ffffff",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#df9f9f",
+        "activityBar.activeBackground": "#c7354c",
+        "activityBar.background": "#c7354c",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#4dc936",
         "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#ffffff",
-        "statusBar.background": "#f4f5f0",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#dee1d1",
-        "statusBarItem.remoteBackground": "#f4f5f0",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#f4f5f0",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#f4f5f099",
-        "titleBar.inactiveForeground": "#15202b99"
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#c7354c",
+        "statusBar.background": "#9f2a3d",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#c7354c",
+        "statusBarItem.remoteBackground": "#9f2a3d",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#9f2a3d",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#9f2a3d99",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "f4f5f0"
+    "peacock.color": "rgb(159, 42, 61)"
 }
