--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   },
   "homepage": "https://github.com/carreraprogrammer/To-do-List#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.19.4",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.1.2",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
