--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "env": {
       "test": {
-        "plugins": ["@babel/plugin-transform-modules-commonjs", "css-modules-transform"]
+        "plugins": ["@babel/plugin-transform-modules-commonjs"]
       }
     }
   }
+  
