--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "webpack",
     "start": "webpack serve --open"
   },
@@ -24,12 +24,23 @@
     "@babel/preset-env": "^7.19.4",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "css-loader": "^6.7.1",
+    "global-jsdom": "^8.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jsdom": "^20.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "jest-environment-jsdom": "^29.1.2",
+    "jsdom": "^20.0.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "verbose": true
   }
 }
