--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
@@ -21,12 +21,16 @@
   },
   "homepage": "https://github.com/carreraprogrammer/To-do-List#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "global-jsdom": "^8.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.2.0",
+    "jsdom": "^20.0.1",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -38,6 +42,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^29.2.0",
     "lodash": "^4.17.21"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "verbose": true
   }
+
 }
